<resources>
    <string name="app_name">ysu3-Sizebook</string>
    <string name="add_record">Add a record</string>
    <string name="view_detail">View detail</string>
    <string name="edit_record">Edit record</string>
    <string name="delete_record">Delete record</string>

    <string name="hello_world">Hello world!</string>
    <string name="records">List of records:</string>
    <string name="number_of_records">Number of records:  </string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_add_record">add_record</string>


    <string name="enter_name">Enter name here</string>
    <string name="enter_date">yyyy-mm-dd</string>
    <string name="neck">in inches</string>
    <string name="bust">in inches</string>
    <string name="chest">in inches</string>
    <string name="waist">in inches</string>
    <string name="hip">in inches</string>
    <string name="inseam">in inches</string>
    <string name="comment">comments</string>

    <string name="nameLabel">*Name: </string>
    <string name="dateLabel">Date: </string>
    <string name="neckLabel">Neck: </string>
    <string name="bustLabel">Bust: </string>
    <string name="chestLabel">Chest: </string>
    <string name="waistLabel">Waist: </string>
    <string name="hipLabel">Hip: </string>
    <string name="inseamLabel">Inseam: </string>
    <string name="commentLabel">Comment: </string>

    <string name="save">save</string>
    <string name="title_activity_view_detail">view_detail</string>
    <string name="title_activity_edit_record">EditRecord</string>






</resources>
